# finger-angles-predictions-EMG

./: .gitignore  LICENSE  README.md
python/: .gitignore  README.md  acquisition.py  cli  cli.py  demo.py  pyproject.toml  requirements.txt  setup.cfg  speed_test.py  test.py
python/ci/: lint  lint.sh
python/scripts/: acquisition.py  demo.py  detection.py  filter_test.py  prediction.py  speed_test.py  tests.py  uart_test.py
python/src/: data.py  filters.py  plot.py  types.py  utils.py
python/src/ai/: feature_transform.ipynb  predictor.py  preprocess.py  test.py  training.py  transform.py  transform_unique.py  utilities.py
python/src/ai/data/: Hand_angles_record_1.csv  Hand_angles_record_2.csv  Hand_angles_record_3.csv  (+1 more)
python/src/animation/: base.py
python/src/cli/: args.py
python/src/data/: data.py  executors.py  experiments.py  filters.py  handlers.py  processes.py  savers.py  sources.py  threads.py
python/src/illustration/: main.py
python/src/opencv/: finger.py  handDetected.py  main.py  record.py
python/src/pipeline/: base.py  csv.py  data.py  filters.py  handlers.py  mappers.py  processes.py  savers.py  serial.py  sources.py  threads.py  types.py
python/src/pipeline2/: conditions.py  csv.py  loaders.py  mappers.py  serial.py  sinks.py  sources.py
python/src/utils/: lists.py  loggers.py  plot.py  queues.py  types.py
python/test/pipeline/: conditional_handler_test.py  handlers_list_test.py  handlers_test.py
python/tests/: dummy_test.py
python/tests/pipeline/: conditional_handler_test.py  handlers_list_test.py  handlers_test.py
(+62 files in other folders)
