[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["vigenere23 <lolgab1@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
mediapipe = "^0.8.10"
opencv-contrib-python = "^4.6.0"
pandas = "^1.4.3"
pyserial = "^3.5"
scikit-learn = "^1.1.1"
typed-argument-parser = "^1.7.2"
scipy = "^1.8.1"
modupipe = "1.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
